--- a/ext-b.html
+++ b/ext-b.html
@@ -1,76 +1,47 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ext b</title>
-  <link rel="stylesheet" href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.css">
-  <style>
-    #ext-b-wrap {
-      background-color: rgba(205, 236, 255, 0.51);
-      padding: 20px;
-      margin-top: 20px;
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>ext b</title>
+    <link rel="stylesheet" href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.css">
+    <style>#ext-b-wrap {
+        background-color: rgba(205, 236, 255, .51);
+        padding: 20px;
+        margin-top: 20px
     }
 
     h1 {
-      margin: 0;
-      padding: 0;
-      font-size: 40px;
+        margin: 0;
+        padding: 0;
+        font-size: 40px
     }
 
     input.form-control {
-      width: 80vw;
-      font-size: 28px !important;
-    }
-  </style>
+        width: 80vw;
+        font-size: 28px !important
+    }</style>
 </head>
 <body>
 <div id="ext-b-wrap">
-  <article class="article">
-    <h1>Ext-B(FlatUI)</h1>
-    <h4>Connecting...</h4>
-    <input type="text" value="" placeholder="FlatUI" class="form-control">
-  </article>
+    <article class="article"><h1>Ext-B(FlatUI)</h1> <h4>Connecting...</h4> <input type="text" value=""
+                                                                                  placeholder="FlatUI"
+                                                                                  class="form-control"></article>
 </div>
-<script>
-  ;((exports) => {
-    const chan = new MessageChannel()
-
-    exports.mount = ({ host }) => {
-      const input = host.querySelector('#ext-b-wrap input')
-      const statusEl = host.querySelector('#ext-b-wrap h4')
-
-      input.addEventListener('input', (e) => {
-        const value = e.target.value
-        chan.port1.postMessage({
-          action: 'update-input-value',
-          payload: { value }
-        })
-      }, false)
-
-      chan.port1.onmessage = (e) => {
-        const data = e.data
-
-        if (data === ':established') {
-          statusEl.innerHTML = '<span style="color: green; ">Connected!</span>'
-          return
-        }
-
-        if (data && data.action === 'input-value-changed') {
-          input.value = data.payload.value
-        }
-      }
-    }
-
-    // establish message channel
-    setTimeout(() => {
-      postMessage(':establish :ext-b',
-        '*',
-        [chan.port2])
+<script>(e => {
+  const t = new MessageChannel
+  e.mount = (({ host: e }) => {
+    const a = e.querySelector('#ext-b-wrap input'), n = e.querySelector('#ext-b-wrap h4')
+    a.addEventListener('input', e => {
+      const a = e.target.value
+      t.port1.postMessage({ action: 'update-input-value', payload: { value: a } })
+    }, !1), t.port1.onmessage = (e => {
+      const t = e.data
+      ':established' !== t ? t && 'input-value-changed' === t.action && (a.value = t.payload.value) : n.innerHTML = '<span style="color: green; ">Connected!</span>'
     })
-  })(window['ext-b'] = {})
-</script>
+  }), setTimeout(() => {postMessage(':establish :ext-b', '*', [t.port2])})
+})(window['ext-b'] = {})</script>
 </body>
 </html>
