--- a/ext-b.html
+++ b/ext-b.html
@@ -12,6 +12,8 @@
       background-color: rgba(205, 236, 255, 0.51);
       padding: 20px;
       margin-top: 20px;
+      box-sizing: border-box;
+      width: 100%;
     }
 
     h1 {
