--- a/ext-react/index.html
+++ b/ext-react/index.html
@@ -6,11 +6,13 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="./index.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@4.0.0/github-markdown.min">
+  <script src="./index.tsx"></script>
   <style>
     main {
       background-color: #afd1fd;
       padding: 20px;
+      min-height: 259px;
     }
 
     h1 {
