--- a/ext-a.html
+++ b/ext-a.html
@@ -40,7 +40,7 @@
   <h1>Ext-A</h1>
   <h4>Connecting...</h4>
 </div>
-<script src="http://localhost:8080/ext-a.js"></script>
-<!--<script src="./ext-a.js"></script>-->
+<!--<script src="http://localhost:8080/ext-a.js"></script>-->
+<script src="./ext-a.js"></script>
 </body>
 </html>
